[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/UI/CustomThemes/custom_theme.tres" type="Theme" id=1]
[ext_resource path="res://ChangePassword/ChangePassword.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 0.12549, 0.278431, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ChangePassword" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.172549, 0.32549, 0.580392, 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -150.0
margin_right = 175.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 300.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PasswordEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "New password"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 87.0
margin_right = 300.0
margin_bottom = 91.0

[node name="ChangeButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 300.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Change password"

[node name="Notification" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 300.0
margin_bottom = 200.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/ChangeButton" to="." method="_on_ChangeButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
